# LYFTR-AI-BACKEND-ASSIGNMENT

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_manual.sh
app/: config.py  logging_utils.py  main.py  metrics.py  models.py  storage.py
tests/: conftest.py  test_health.py  test_messages.py  test_stats.py  test_webhook.py
