[tool.poetry]
name = "webhook-api"
version = "1.0.0"
description = "Production-style FastAPI webhook service"
authors = ["Lyftr AI Backend Assignment"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
